Checkin from actual website. Layout fixes
Checkin from the hosted website. Directory is now git clone.
Fix some layout problems on the home page.

--- a/css/ligerbots.css
+++ b/css/ligerbots.css
@@ -65,7 +65,6 @@ body{
     background-color: rgb(208,78,29);
 }
 .blue-title,.orange-title{
-    /* box-shadow: 5px 5px 7px rgb(117,117,117); */
     height: 34px;
     line-height: 34px;
     text-shadow: 4px 4px 5px rgb(63,63,63);
@@ -104,20 +103,28 @@ body{
     width: 100%;
 }
 
-.home-image-box {
+.blog-image-box,.brag-image-box {
     width: 100%;
     background: black;
 }
 
-.home-image-box img {
+.blog-image-box img {
     max-width: 100%;
     display: block;
     margin-left: auto;
     margin-right: auto;
     margin-top: auto;
     margin-bottom: auto;
-    /*height: 500px; */
-    /*max-height: 400px;*/
+    max-height: 500px;
+}
+
+.brag-image-box img {
+    max-width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .masthead{
@@ -183,6 +190,9 @@ body{
 }
 .bottom-margin {
     margin-bottom: 20px;
+}
+.bottom-padding {
+    padding-bottom: 20px;
 }
 
 .side-padding {
